Fixed bug - logo is too small on phone

--- a/assets/styles/layout_header.css
+++ b/assets/styles/layout_header.css
@@ -24,16 +24,10 @@
         }
 
         .logo{
-            width: 100px;
+            width: 175px;
         }
             
-        /* The logo increases in size for larger devices  */
-        @media (min-width: 399px){
-                .logo {
-                    width: 175px;
-                }
-        }
-        
+        /* The logo increases in size for larger devices  */   
        @media (min-width: 459px){
                 .logo {
                     width: 200px;
